# SimuladorArgon

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
simulador_dm/: __init__.py  _simulador.cpp  _simulador.hpp  _wrapper_simulador.py  _wrapper_simulator.py  analisis.py  bindings.cpp
tests/: test_analisis.py  test_carga.py  test_csv.py  test_inestabilidad.py  test_parametros_borde.py
