[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simulador-dm"
version = "1.0.0"
description = "Simulador de dinámica molecular para Argón con interfaz Python"
requires-python = ">=3.7"
dependencies = [
    "pybind11>=2.6.0",
    "pandas>=1.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]        
testpaths = ["tests"]            